# fedfs-utils

./: Makefile  README.md  fedfs-utils-0.10.0-missing-man-pages.patch  fedfs-utils.spec
src/: .gitignore  INSTALL  Makefile.am  README  autogen.sh  configure.ac  doxy.cfg
src/contrib/: Makefile.am
src/contrib/init/: rpcfedfsd.service
src/doc/: CheckInTests
src/doc/ldap/: fedfs-schema.ldif  fedfs.schema
src/doc/man/: Makefile.am  fedfs-create-junction.8  fedfs-create-junction.8.in  fedfs-create-replication.8  fedfs-create-replication.8.in  fedfs-delete-junction.8  fedfs-delete-junction.8.in  fedfs-delete-replication.8  fedfs-delete-replication.8.in  fedfs-domainroot.8.in  fedfs-get-limited-nsdb-params.8  fedfs-get-limited-nsdb-params.8.in  fedfs-get-nsdb-params.8  fedfs-get-nsdb-params.8.in  fedfs-lookup-junction.8  fedfs-lookup-junction.8.in  fedfs-lookup-replication.8  fedfs-lookup-replication.8.in  fedfs-map-nfs4.8  fedfs-map-nfs4.8.in  fedfs-null.8  fedfs-null.8.in  fedfs-set-nsdb-params.8  fedfs-set-nsdb-params.8.in  fedfs.7  fedfs.7.in  mount.fedfs.8  mount.fedfs.8.in  nfsref.8  nfsref.8.in  nsdb-annotate.8  nsdb-annotate.8.in  nsdb-create-fsl.8  nsdb-create-fsl.8.in  nsdb-create-fsn.8  nsdb-create-fsn.8.in  nsdb-delete-fsl.8  nsdb-delete-fsl.8.in  nsdb-delete-fsn.8  nsdb-delete-fsn.8.in  (+25 more)
src/src/: Makefile.am
src/src/PyFedfs/: Makefile.am  __init__.py  run.py  userinput.py  utilities.py
src/src/PyFedfs/domainroot/: Makefile.am  __init__.py  addremove.py  clean.py  exports.py  mounts.py  parse_file.py  paths.py  status.py
src/src/PyFedfs/jumpstart/: Makefile.am  __init__.py  backup.py  cert.py  firewall.py  install.py  slapd.py  status.py  transaction.py
src/src/domainroot/: Makefile.am  fedfs-domainroot.in
src/src/fedfsc/: Makefile.am  fedfs-create-junction.c  fedfs-create-replication.c  fedfs-delete-junction.c  fedfs-delete-replication.c  fedfs-get-limited-nsdb-params.c  fedfs-get-nsdb-params.c  fedfs-lookup-junction.c  fedfs-lookup-replication.c  fedfs-null.c  fedfs-set-nsdb-params.c
src/src/fedfsd/: Makefile.am  access.c  fedfsd.h  gss.c  main.c  svc.c
src/src/include/: Makefile.am  admin.h  fedfs.h  gpl-boiler.h  nfs-plugin.h  nsdb.h  xlog.h
src/src/jumpstart/: Makefile.am  nsdb-jumpstart.in
src/src/libadmin/: Makefile.am  admin-internal.h  admin.c  fedfs_admin_xdr.c  gss.c  junction.c  nsdb.c  null.c
src/src/libjunction/: display-junction.c  junction.c
src/src/libnsdb/: administrator.c  annotation.c  connsec.c  fileserver.c  ldap.c  nsdb-internal.h  nsdb.c  path.c  sqlite.c
src/src/libsi/: getsrvinfo.c
src/src/libxlog/: xlog.c
src/src/nfsref/: add.c  lookup.c  remove.c
src/src/nsdbc/: nsdb-annotate.c  nsdb-create-fsl.c  nsdb-create-fsn.c  nsdb-delete-fsl.c  nsdb-delete-fsn.c  nsdb-delete-nsdb.c  nsdb-describe.c  nsdb-list.c  nsdb-nces.c  nsdb-remove-nci.c  nsdb-resolve-fsn.c  nsdb-simple-nce.c  nsdb-update-fsl.c  nsdb-update-nci.c
src/src/nsdbparams/: delete.c  list.c  show.c  update.c
src/src/plug-ins/: nfs-plugin.c
src/sysconf/: Makefile.am
src/sysconf/fedfsd/: access.conf
